Update cmake options available

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,7 @@ nbody_option(USE_HYDRO                  "All particle types (gas, stars, black h
 nbody_option(USE_SWIFT_INTERACE		"SWIFT Interface" OFF)
 nbody_option(USE_EXTRA_INPUT_INFO		"Extra Input Info" OFF)
 nbody_option(USE_EXTRA_FOF_INFO		"Extra FOF Info" OFF)
+nbody_option(USE_LARGE_KDTREE		"Require large mem KDTree as there are more than > max 32-bit integer entries" OFF)
 
 # Process high-level options
 if (NBODY_USE_BARYONS)
@@ -136,6 +137,7 @@ nbody_option_defines(USE_BH                    BHON)
 nbody_option_defines(USE_SWIFT_INTERFACE       SWIFTINTERFACE)
 nbody_option_defines(USE_EXTRA_INPUT_INFO      EXTRAINPUTINFO)
 nbody_option_defines(USE_EXTRA_FOF_INFO        EXTRAFOFINFO)
+nbody_option_defines(USE_LARGE_KDTREE          LARGETREE)
 
 #
 # How we find GSL and set it up
@@ -211,9 +213,10 @@ nbody_report(Types "All calculations/properties stored as float" SINGLE_PRECISIO
 nbody_report("Particle data" "Do not store mass, all particles are the same mass" NO_MASS
              "Use single precision to store positions, velocities, other props" SINGLE_PARTICLE_PRECISION
              "Use unsigned particle PIDs" UNSIGNED_PARTICLE_PIDS "Use unsigned particle IDs" UNSIGNED_PARTICLE_IDS
-             "Activate gas" USE_GAS "Activate stars" USE_STARS
+             "Activate gas" USE_GAS "Activate stars" USE_STARS "Activate black holes/sinks" USE_BH
 			 "Extra input info stored" USE_EXTRA_INPUT_INFO
-			 "Extra FOF info stored" USE_EXTRA_FOF_INFO)
+			 "Extra FOF info stored" USE_EXTRA_FOF_INFO
+			 "Large memory KDTree" USE_LARGE_KDTREE)
 message("")
 message("Compilation")
 message("-----------")
