bug fix in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,7 +88,7 @@ nbody_option(USE_GAS                    "Particle class has gas" OFF)
 nbody_option(USE_STARS                  "Particle class has stars" OFF)
 nbody_option(USE_BARYONS                "Gas and Stars" OFF)
 nbody_option(USE_HYDRO                  "All particle types (gas, stars, black holes, etc)" OFF)
-nbody_option(USE_SWIFT_INTERACE		"SWIFT Interface" OFF)
+nbody_option(USE_SWIFT_INTERFACE		"SWIFT Interface" OFF)
 nbody_option(USE_EXTRA_INPUT_INFO		"Extra Input Info" OFF)
 nbody_option(USE_EXTRA_FOF_INFO		"Extra FOF Info" OFF)
 nbody_option(USE_LARGE_KDTREE		"Require large mem KDTree as there are more than > max 32-bit integer entries" OFF)
