Update for extra dm properties

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,7 @@ nbody_option(USE_GAS                    "Particle class has gas" OFF)
 nbody_option(USE_STARS                  "Particle class has stars" OFF)
 nbody_option(USE_BARYONS                "Gas and Stars" OFF)
 nbody_option(USE_HYDRO                  "All particle types (gas, stars, black holes, etc)" OFF)
+nbody_option(USE_EXTRA_DM_PROPERTIES    "DM particle have extra properties" OFF)
 nbody_option(USE_SWIFT_INTERFACE		"SWIFT Interface" OFF)
 nbody_option(USE_EXTRA_INPUT_INFO		"Extra Input Info" OFF)
 nbody_option(USE_EXTRA_FOF_INFO		    "Extra FOF Info" OFF)
@@ -134,6 +135,7 @@ nbody_option_defines(LARGEKDTREE               LARGETREE)
 nbody_option_defines(USE_GAS                   GASON)
 nbody_option_defines(USE_STARS                 STARON)
 nbody_option_defines(USE_BH                    BHON)
+nbody_option_defines(USE_EXTRA_DM_PROPERTIES   EXTRADMON)
 nbody_option_defines(USE_SWIFT_INTERFACE       SWIFTINTERFACE)
 nbody_option_defines(USE_EXTRA_INPUT_INFO      EXTRAINPUTINFO)
 nbody_option_defines(USE_EXTRA_FOF_INFO        EXTRAFOFINFO)
@@ -213,11 +215,12 @@ nbody_report(Types "All calculations/properties stored as float" SINGLE_PRECISIO
 nbody_report("Particle data" "Do not store mass, all particles are the same mass" NO_MASS
              "Use single precision to store positions, velocities, other props" SINGLE_PARTICLE_PRECISION
              "Use unsigned particle PIDs" UNSIGNED_PARTICLE_PIDS "Use unsigned particle IDs" UNSIGNED_PARTICLE_IDS
-             "Activate gas" USE_GAS "Activate stars" USE_STARS "Activate black holes/sinks" USE_BH
-			 "Extra input info stored" USE_EXTRA_INPUT_INFO
-			 "Extra FOF info stored" USE_EXTRA_FOF_INFO
-			 "Large memory KDTree" USE_LARGE_KDTREE
-			 "Particle compiled for SWIFT" USE_SWIFT_INTERFACE
+             "Activate gas" USE_GAS "Activate stars" USE_STARS "Activate black holes/sinks" USE_BH 
+             "Activate extra dm properties" USE_EXTRA_DM_PROPERTIES 
+             "Extra input info stored" USE_EXTRA_INPUT_INFO
+             "Extra FOF info stored" USE_EXTRA_FOF_INFO 
+             "Large memory KDTree" USE_LARGE_KDTREE
+             "Particle compiled for SWIFT" USE_SWIFT_INTERFACE
 		 )
 message("")
 message("Compilation")
