Update to GSL Fitting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,7 +147,7 @@ nbody_option_defines(USE_LARGE_KDTREE          LARGETREE)
 macro(find_gsl)
 	find_package(GSL REQUIRED)
 	if( ${GSL_VERSION} GREATER 2.2 OR ${GSL_VERSION} EQUAL 2.2)
-		list(APPEND NBODY_DEFINES GSL_22)
+		list(APPEND NBODY_DEFINES HAVE_GSL22)
 	endif()
 	list(APPEND NBODY_INCLUDE_DIRS ${GSL_INCLUDE_DIRS})
 	list(APPEND NBODY_LIBS ${GSL_LIBRARIES})
