Update to make flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,7 +130,7 @@ nbody_option_defines(SINGLE_PRECISION          SINGLEPRECISION)
 nbody_option_defines(LONG_INT                  LONGINT)
 nbody_option_defines(NO_MASS                   NOMASS)
 nbody_option_defines(SINGLE_PARTICLE_PRECISION LOWPRECISIONPOS)
-nbody_option_defines(SINGLE_PARTICLE_PRECISION LOWNBODYPRECISION)
+nbody_option_defines(SINGLE_PARTICLE_PRECISION SINGLEPRECISION_NBODY_DOUBLE)
 nbody_option_defines(SINGLE_PARTICLE_POSITION_PRECISION LOWPRECISIONPOS)
 nbody_option_defines(UNSIGNED_PARTICLE_PIDS    PARTICLEUPIDS)
 nbody_option_defines(UNSIGNED_PARTICLE_IDS     PARTICLEUIDS)
