--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -162,6 +162,9 @@ macro(find_openmp)
 		list(APPEND NBODY_CXX_FLAGS ${OpenMP_CXX_FLAGS})
 		list(APPEND NBODY_LINK_FLAGS ${OpenMP_CXX_FLAGS})
 		list(APPEND NBODY_DEFINES USEOPENMP USEOMP)
+        if( ${OMP_VERSION} GREATER 4.0 OR ${OMP_VERSION} EQUAL 4.0)
+            list(APPEND NBODY_DEFINES USEOMPTARGET)
+        endif()
 		set(NBODY_HAS_OPENMP Yes)
 	endif()
 endmacro()
