--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -162,8 +162,9 @@ macro(find_openmp)
 		list(APPEND NBODY_CXX_FLAGS ${OpenMP_CXX_FLAGS})
 		list(APPEND NBODY_LINK_FLAGS ${OpenMP_CXX_FLAGS})
 		list(APPEND NBODY_DEFINES USEOPENMP USEOMP)
-        if( ${OMP_VERSION} GREATER 4.0 OR ${OMP_VERSION} EQUAL 4.0)
+        if( ${OpenMP_CXX_VERSION} GREATER 4.0 OR ${OpenMP_CXX_VERSION} EQUAL 4.0)
             list(APPEND NBODY_DEFINES USEOMPTARGET)
+            set(NBODY_HAS_OMPTARGET Yes)
         endif()
 		set(NBODY_HAS_OPENMP Yes)
 	endif()
@@ -233,7 +234,7 @@ macro(nbody_report feature)
 endmacro()
 
 message("\nNBodyLib successfully configured with the following settings:")
-nbody_report(Dependencies "OpenMP" OPENMP)
+nbody_report(Dependencies "OpenMP" OPENMP "OpenMP target directive supported" OMPTARGET)
 nbody_report(Dependencies "OpenACC" OPENACC)
 nbody_report(Types "All calculations/properties stored as float" SINGLE_PRECISION "All integeres are long int" LONG_INT)
 nbody_report("Particle data" "Do not store mass, all particles are the same mass" NO_MASS
