--- a/.travis.yml
+++ b/.travis.yml
@@ -99,6 +99,13 @@ matrix:
       sources: ubuntu-toolchain-r-test
       packages: [g++-5, libgsl0-dev, libopenmpi-dev]
     env: COMPILER=g++-5 GSL22=1 USESWIFT=1
+  - compiler: clang
+    dist: focal
+    addons:
+     apt:
+      sources: ubuntu-toolchain-r-test
+      packages: [clang-9, libgsl0-dev, libopenmpi-dev]
+    env: COMPILER=clang-9 GSL22=1
 
 # We "source" it because it exports variables
 before_install:
