update to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,16 +158,23 @@ endmacro()
 # How we find OpenMP and set it up
 #
 macro(find_openmp)
-	find_package(OpenMP COMPONENTS CXX)
-	if (OPENMP_FOUND)
+    find_package(OpenMP 3.0)
+	if (OpenMP_CXX_FOUND)
+        #store the version number in cache
+        if (DEFINED OpenMP_CXX_VERSION)
+            set(OPENMP_CXX_VERSION_FOUND ${OpenMP_CXX_VERSION} CACHE INTERNAL "OpenMP Version")
+        endif()
+        #update linking
 		list(APPEND NBODY_CXX_FLAGS ${OpenMP_CXX_FLAGS})
 		list(APPEND NBODY_LINK_FLAGS ${OpenMP_CXX_FLAGS})
-		list(APPEND NBODY_DEFINES USEOPENMP USEOMP)
-        if(NBODY_OPENMPENABLEGPU AND (${OpenMP_CXX_VERSION} GREATER 4.0 OR ${OpenMP_CXX_VERSION} EQUAL 4.0))
-            list(APPEND NBODY_DEFINES USEOPENMPGPU)
-            set(NBODY_HAS_OPENMPGPU Yes)
+        list(APPEND NBODY_DEFINES USEOPENMP USEOMP)
+        set(NBODY_HAS_OPENMP Yes)
+        if(NBODY_OPENMPENABLEGPU)
+            if (NOT ${OPENMP_CXX_VERSION_FOUND} LESS 4.0)
+                list(APPEND NBODY_DEFINES USEOPENMPGPU)
+                set(NBODY_HAS_OPENMPGPU Yes)
+            endif()
         endif()
-		set(NBODY_HAS_OPENMP Yes)
 	endif()
 endmacro()
 
