--- a/.travis.yml
+++ b/.travis.yml
@@ -29,13 +29,13 @@ sudo: false
 # We try with both GNU and LLVM
 matrix:
  include:
-  - compiler: g++
+  - compiler: g++-7
     addons:
      apt:
       sources: ubuntu-toolchain-r-test
       packages: [g++-7, libgsl0-dev]
     env: COMPILER=g++-7
-  - compiler: g++
+  - compiler: g++-7
     addons:
      apt:
       sources: ubuntu-toolchain-r-test
@@ -53,44 +53,44 @@ matrix:
       sources: ubuntu-toolchain-r-test
       packages: [g++-9, libgsl0-dev, libopenmpi-dev]
     env: COMPILER=g++-9
-  - compiler: g++
+  - compiler: g++-7
     addons:
      apt:
       sources: ubuntu-toolchain-r-test
       packages: [g++-7, libgsl0-dev, libopenmpi-dev]
     env: COMPILER=g++-7 USEGAS=1 USESTARS=1
-  - compiler: g++
+  - compiler: g++-7
     addons:
      apt:
       sources: ubuntu-toolchain-r-test
       packages: [g++-7, libgsl0-dev, libopenmpi-dev]
     env: COMPILER=g++-7 USEGAS=1 USESTARS=1 USEBH=1
-  - compiler: g++
+  - compiler: g++-7
     addons:
      apt:
       sources: ubuntu-toolchain-r-test
       packages: [g++-7, libgsl0-dev, libopenmpi-dev]
     env: COMPILER=g++-7 USEEXTRADM=1
-  - compiler: g++
+  - compiler: g++-7
     addons:
      apt:
       sources: ubuntu-toolchain-r-test
       packages: [g++-7, libgsl0-dev, libopenmpi-dev]
     env: COMPILER=g++-7 USESWIFT=1
-  - compiler: g++
+  - compiler: g++-7
     addons:
      apt:
       sources: ubuntu-toolchain-r-test
       packages: [g++-7, libgsl0-dev, libopenmpi-dev]
     env: COMPILER=g++-7 NOMASS=1
-  - compiler: g++
+  - compiler: g++-7
     dist: focal
     addons:
      apt:
       sources: ubuntu-toolchain-r-test
       packages: [g++-7, libgsl0-dev, libopenmpi-dev]
     env: COMPILER=g++-7 GSL22=1
-  - compiler: g++
+  - compiler: g++-7
     dist: focal
     addons:
      apt:
