--- a/.travis.yml
+++ b/.travis.yml
@@ -30,54 +30,63 @@ sudo: false
 matrix:
  include:
   - compiler: g++-7
+    dist: focal
     addons:
      apt:
       sources: ubuntu-toolchain-r-test
       packages: [g++-7, libgsl0-dev]
     env: COMPILER=g++-7 CXX=g++-7 CC=gcc-7
   - compiler: g++-7
+    dist: focal
     addons:
      apt:
       sources: ubuntu-toolchain-r-test
       packages: [g++-7, libgsl0-dev, libopenmpi-dev]
     env: COMPILER=g++-7
   - compiler: g++-8
+    dist: focal
     addons:
      apt:
       sources: ubuntu-toolchain-r-test
       packages: [g++-8, libgsl0-dev, libopenmpi-dev]
-    env: COMPILER=g++-8
+    env: COMPILER=g++-8 CXX=g++-8 CC=gcc-8
   - compiler: g++-9
+    dist: focal
     addons:
      apt:
       sources: ubuntu-toolchain-r-test
       packages: [g++-9, libgsl0-dev, libopenmpi-dev]
-    env: COMPILER=g++-9
+    env: COMPILER=g++-9 CXX=g++-9 CC=gcc-9
   - compiler: g++-7
+    dist: focal
     addons:
      apt:
       sources: ubuntu-toolchain-r-test
       packages: [g++-7, libgsl0-dev, libopenmpi-dev]
     env: COMPILER=g++-7 USEGAS=1 USESTARS=1
   - compiler: g++-7
+    dist: focal
     addons:
      apt:
       sources: ubuntu-toolchain-r-test
       packages: [g++-7, libgsl0-dev, libopenmpi-dev]
     env: COMPILER=g++-7 USEGAS=1 USESTARS=1 USEBH=1
   - compiler: g++-7
+    dist: focal
     addons:
      apt:
       sources: ubuntu-toolchain-r-test
       packages: [g++-7, libgsl0-dev, libopenmpi-dev]
     env: COMPILER=g++-7 USEEXTRADM=1
   - compiler: g++-7
+    dist: focal
     addons:
      apt:
       sources: ubuntu-toolchain-r-test
       packages: [g++-7, libgsl0-dev, libopenmpi-dev]
     env: COMPILER=g++-7 USESWIFT=1
   - compiler: g++-7
+    dist: focal
     addons:
      apt:
       sources: ubuntu-toolchain-r-test
