--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ matrix:
      apt:
       sources: ubuntu-toolchain-r-test
       packages: [g++-7, libgsl0-dev]
-    env: COMPILER=g++-7 CXX=g++-7 CC=gcc-7
+    env: COMPILER=g++-7 
   - compiler: g++-7
     dist: focal
     addons:
@@ -49,14 +49,14 @@ matrix:
      apt:
       sources: ubuntu-toolchain-r-test
       packages: [g++-8, libgsl0-dev, libopenmpi-dev]
-    env: COMPILER=g++-8 CXX=g++-8 CC=gcc-8
+    env: COMPILER=g++-8 
   - compiler: g++-9
     dist: focal
     addons:
      apt:
       sources: ubuntu-toolchain-r-test
       packages: [g++-9, libgsl0-dev, libopenmpi-dev]
-    env: COMPILER=g++-9 CXX=g++-9 CC=gcc-9
+    env: COMPILER=g++-9
   - compiler: g++-7
     dist: focal
     addons:
