--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,9 +34,9 @@ set(CMAKE_CXX_STANDARD 11)
 #include cmake stuff
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)
 # include some general cmake utility functions
-include (MyCMakeUtils)
+include (NBodylibCMakeUtils)
 # complation summary
-include(CompilationMessages)
+include(NBodylibCompilationMessages)
 #include(CMakeOpenMP)
 
 
