Update to unit test of NBody library

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -14,6 +14,7 @@ foreach(test ${tests})
   
   add_executable(${test} ${test}.cxx)
   target_compile_definitions(${test} PRIVATE ${NBODY_DEFINES})
+  target_compile_options(${test} PRIVATE ${NBODY_CXX_FLAGS})
 	target_include_directories(${test} PRIVATE ${NBODY_INCLUDE_DIRS})
   target_link_libraries(${test} ${GSL_LIBRARIES} nbodylib)
   if (NBODY_LINK_FLAGS)
