Generalized Node class
Added a more general FindNearestInTree set of functions that uses the dimensions on which the tree is built and automatically gets the correct properties of the particle to search  the data.

--- a/src/KDTree/CMakeLists.txt
+++ b/src/KDTree/CMakeLists.txt
@@ -13,6 +13,7 @@ set(KDTREE_SRC
     KDCalcSmoothQuantities.cxx
     KDFindNearest.cxx
     KDFOF.cxx
+    KDNode.cxx
     KDLeafNode.cxx
     KDSplitNode.cxx
     KDTree.cxx
